# revenuecat-application

./: .gitignore  README.md
artifacts/dry-run/: actions.json
autoapply/: agent.py  cli.py  mapper.py  pyproject.toml  runner.py  schemas.py
autoapply/adapters/: ashby.py
autoapply/backends/: ollama.py
daemon/: application.md  persona.json  publisher.py
daemon/mailbox/: __init__.py  approval_loop.py  approver.py  autosender.py  classifier.py  drafter.py  notifier.py  poller.py  sender.py  test_approval_loop.py  test_approver.py  test_autoreply.py  test_autosender.py  test_classifier.py  test_drafter.py  test_notifier.py  test_sender.py  test_thread_store.py  thread_store.py
profiles/: revenuecat.json
