[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoapply"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.44",
  "pydantic>=2.7",
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13",
  "python-dotenv>=1.0",
  "google-auth>=2.29",
  "google-auth-oauthlib>=1.2",
  "google-auth-httplib2>=0.2",
  "google-api-python-client>=2.126",
  "anthropic>=0.28",
]

[project.scripts]
autoapply = "autoapply.cli:app"

[tool.setuptools.packages.find]
where = [".."]
